<resources>
    <string name="app_name">Kalkulator</string>
    <string name="str_default_number">0.0</string>
    <string name="str_delete">DEL</string>
    <string name="str_answer">ANSWER</string>
    <string name="str_one">1</string>
    <string name="str_two">2</string>
    <string name="str_there">3</string>
    <string name="str_division">/</string>
    <string name="str_four">4</string>
    <string name="str_five">5</string>
    <string name="str_six">6</string>
    <string name="str_subtraction">-</string>
    <string name="str_seven">7</string>
    <string name="str_eight">8</string>
    <string name="str_nine">9</string>
    <string name="str_multiplication">X</string>
    <string name="str_dot">.</string>
    <string name="str_zero">0</string>
    <string name="str_modulation">%</string>
    <string name="str_addition">+</string>

</resources>