<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:backgroundTint="@color/white">
                <TextView
                    android:id="@id/tvResult"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textIsSelectable="true"
                    tools:text="@string/str_default_number"/>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_delete"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold" />
        <Button
            android:id="@id/btnAnswer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_answer"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@id/btnOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/str_one" />
        <Button
            android:id="@id/btnTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_two"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnThere"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_there"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnDivision"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_division"
            android:layout_weight="1"
            android:backgroundTint="@color/brown"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">
        <Button
            android:id="@id/btnFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_four"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_five"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnSix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_six"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnSubtraction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_subtraction"
            android:layout_weight="1"
            android:backgroundTint="@color/brown"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">
        <Button
            android:id="@id/btnSeven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_seven"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnEight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_eight"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnNine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_nine"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnMultiplication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_multiplication"
            android:layout_weight="1"
            android:backgroundTint="@color/brown"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@id/btnDot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_dot"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnZero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_zero"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnPercentage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_modulation"
            android:layout_weight="1"
            android:backgroundTint="@color/brown"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@id/btnAddition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_addition"
            android:layout_weight="1"
            android:backgroundTint="@color/brown"
            android:layout_marginEnd="2dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>